fix: border highlight and spacing of study media item

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -544,6 +544,11 @@ a {
 
 .study-bible-item {
   border: 0.25em solid transparent;
+  border-radius: 8px;
+}
+
+.study-bible-item img {
+  border-radius: unset;
 }
 
 .study-bible-item-selected {
@@ -551,8 +556,8 @@ a {
 }
 
 .study-bible-item-selected .q-checkbox {
-  z-index: 9;
   position: absolute;
   top: 0;
   right: 0;
+  background: transparent;
 }
